@@ -275,7 +275,6 @@ android {
     testOptions { 
          unitTests.all {
              maxHeapSize '1g'
-             jvmArgs '-XX:MaxPermSize=512m'
          }
     }
 }
